# pipdeptree

./: .gitignore  .pre-commit-config.yaml  .prettierrc.toml  .readthedocs.yml  .travis.yml  CHANGES.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  build.rs  dev-requirements.txt  meson.build  pickle_env.py  pipdeptree.py  pyproject.toml  pytest.ini  rust-toolchain.toml  setup.py  tox.ini  tox.toml  whitelist.txt
.github/: FUNDING.yaml  FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: 0-new-issue.yml  1-new-feature.yml  config.yml
.github/workflows/: check.yaml  check.yml  dist.yaml  release.yaml  release.yml
docs/: conf.py  development.rst  example-requirements.txt  explanation.rst  index.rst  v2beta-opts.org
docs/_static/: custom.css
docs/how-to/: output-formats.rst  usage.rst
docs/reference/: cli.rst
docs/tutorial/: getting-started.rst
rust/src/: environment.rs  error.rs  graph.rs  index.rs  lib.rs  lock.rs  metadata.rs  options.rs  process.rs
rust/src/graph/: extras.rs  filter.rs  mod.rs  version.rs
rust/src/metadata/: direct_url.rs  editable.rs
rust/src/metadata/vcs/: bzr.rs  git.rs  hg.rs  mod.rs  shared.rs  svn.rs
rust/src/render/: freeze.rs  graphviz.rs  json.rs  json_tree.rs  mermaid.rs  mod.rs  rich_text.rs  shared.rs  summary.rs  text.rs
rust/tests/: public_api.rs
rust/tests/public_api/: cli.rs  common.rs  environment.rs  graph.rs  index.rs  lock.rs  metadata.rs  mod.rs  process.rs  python.rs  vcs.rs  versions.rs
rust/tests/public_api/graph/: extras.rs  filter.rs  version.rs
rust/tests/public_api/metadata/vcs/: bzr.rs  git.rs  hg.rs  mod.rs  svn.rs
rust/tests/public_api/render/: freeze.rs  graphs.rs  graphviz.rs  json.rs  json_tree.rs  mermaid.rs  mod.rs  rich_text.rs  summary.rs  text.rs
src/pipdeptree/: __init__.py  __main__.py  _adapter.py  _cli.py  _computed.py  _detect_env.py  _discovery.py  _freeze.py  _from_index.py  _from_lock.py  _models.py  _non_host.py  _runner.py  _rust.pyi  _synthetic_dist.py  _util.py  _validate.py  _warning.py  version.py
src/pipdeptree/_models/: dag.py  package.py
src/pipdeptree/_parser/: __init__.py  _direct_url.py  _editable.py  _format.py  _vcs.py  direct_url.py  editable.py  format.py
src/pipdeptree/_parser/_vcs/: __init__.py  _bzr.py  _git.py  _hg.py  _shared.py  _svn.py
src/pipdeptree/_parser/vcs/: bzr.py  git.py  hg.py  shared.py  svn.py
src/pipdeptree/_render/: __init__.py  freeze.py  graphviz.py  json.py  json_tree.py  mermaid.py  rich_text.py  summary.py  text.py
tests/: conftest.py  cyclic_deps.pickle  e2e-tests  e2e_tests.py  guess_version_setuptools.py  our_types.py  pipdeptree_tests.py  pkgs.p  pkgs.pickle  test_api.py  test_cli.py  test_computed.py  test_detect_env.py  test_discovery.py  test_docs.py  test_freeze.py  test_from_index.py  test_from_lock.py  test_integration.py  test_main.py  test_main_python.py  test_models.py  test_non_host.py  test_pipdeptree.py  test_pipdeptree_env.py  test_pipdeptree_pickle.py  test_stub.py  test_validate.py  test_version.py  test_warning.py  testenv.pickle  testenv2.pickle  testenv3.pickle  testenv_requirements.txt  testenv_requirements_win.txt
tests/_models/: test_dag.py  test_package.py
tests/_parser/: test_direct_url.py  test_editable.py  test_format.py  test_vcs.py  test_vcs_bzr.py  test_vcs_hg.py  test_vcs_svn.py
tests/_parser/_vcs/: conftest.py  test_bzr.py  test_git.py  test_hg.py  test_init.py  test_svn.py
tests/_parser/vcs/: conftest.py  test_bzr.py  test_git.py  test_hg.py  test_init.py  test_svn.py
tests/models/: guess_version_setuptools.py  test_models.py
tests/profiles/conflicting/: default.err  default.out  requirements.txt  reverse.out  test_spec.json
tests/profiles/cyclic/: default.err  default.out  requirements.txt  test_spec.json
tests/profiles/webapp/: all_flag.out  default.out  packages_opt.out  packages_reverse.out  requirements.txt  reverse.out  test_spec.json
tests/render/: test_candidate.py  test_freeze.py  test_graphviz.py  test_json.py  test_json_tree.py  test_mermaid.py  test_render.py  test_rich_text.py  test_summary.py  test_text.py
tests/virtualenvs/: .gitignore  Makefile  cyclic_deps.pickle  cyclic_requirements.txt  dummy.pickle  dummy_requirements.txt  pickle_env.py  testenv_requirements.txt  unsatisfiedenv_requirements.txt
tools/: build_rust.py
