[package]
name = "pipdeptree"
version = "0.0.0"
description = "Display Python package dependency trees"
repository = "https://github.com/tox-dev/pipdeptree"
license = "MIT"
edition = "2024"
rust-version = "1.85"

[lib]
name = "_pipdeptree"
path = "rust/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[test]]
name = "public_api"
path = "rust/tests/public_api.rs"

[dependencies]
anstyle = "1.0.14"
clap = { version = "4.6.1", features = ["derive", "string"] }
csv = "1.4.0"
glob = "0.3.3"
pep508_rs = "0.9.2"
pyo3 = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.2"
url = "2.5.8"

[target.'cfg(windows)'.dependencies]
pyo3 = { version = "0.29.0", features = ["generate-import-lib"] }

[dev-dependencies]
mockall = "0.15.0"
rstest = "0.26.1"
temp-env = "0.3.6"

[features]
extension-module = ["pyo3/extension-module"]
abi3 = ["pyo3/abi3-py310"]
default = ["extension-module"]

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
