[build-system]
build-backend = "mesonpy"
requires = [
  "meson>=1.11.2",
  "meson-python>=0.20",
  "ninja>=1.13",
]

[project]
name = "pipdeptree"
description = "Command line utility to show dependency tree of packages."
readme = "README.md"
keywords = [
  "application",
  "cache",
  "directory",
  "log",
  "user",
]
license = "MIT"
license-files = [
  "LICENSE",
]
maintainers = [
  { name = "Bernát Gábor", email = "gaborjbernat@gmail.com" },
  { name = "Kemal Zebari", email = "kemalzebra@gmail.com" },
  { name = "Vineet Naik", email = "naikvin@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
]
dynamic = [
  "version",
]
dependencies = [
  "nab-index>=0.0.8",
  "nab-python>=0.0.8",
]
urls.Changelog = "https://github.com/tox-dev/pipdeptree/releases"
urls.Documentation = "https://pipdeptree.readthedocs.io"
urls.Homepage = "https://github.com/tox-dev/pipdeptree"
urls.Source = "https://github.com/tox-dev/pipdeptree"
urls.Tracker = "https://github.com/tox-dev/pipdeptree/issues"
scripts.pipdeptree = "pipdeptree._runner:main"

[dependency-groups]
test = [
  "covdefaults>=2.3",
  "diff-cover>=10.3",
  "pluggy>=1.6",
  "pytest>=9.1.1",
  "pytest-cov>=7.1",
]
docs = [
  "furo>=2025.12.19",
  "sphinx>=9.1",
  "sphinx-copybutton>=0.5.2",
  "sphinx-inline-tabs>=2025.12.21.14",
  "sphinxcontrib-mermaid>=2.0.3",
]

[tool.meson-python]
limited-api = true

[tool.ruff]
line-length = 120
format.preview = true
format.docstring-code-line-length = 100
format.docstring-code-format = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "A005",    # Allow builtin module shadowing
  "ANN401",  # Expressions typed as typing.Any are disallowed in
  "COM812",  # Conflict with formatter
  "CPY",     # No copyright statements
  "D104",    # Missing docstring in public package
  "D203",    # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D212",    # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
  "DOC201",  # Blocked by Ruff's incomplete Sphinx-style docstring support (astral-sh/ruff#12434)
  "DOC402",  # Blocked by Ruff's incomplete Sphinx-style docstring support (astral-sh/ruff#12434)
  "DOC501",  # Blocked by Ruff's incomplete Sphinx-style docstring support (astral-sh/ruff#12434)
  "INP001",  # no implicit namespace
  "ISC001",  # Conflict with formatter
  "PLR2004", # Magic value used in comparison
  "RUF067",  # `__init__` module should only contain docstrings and re-exports
  "S101",    # asserts allowed
  "S104",    # Possible binding to all interface
]
lint.per-file-ignores."tests/**/*.py" = [
  "D",       # Documentation rules do not apply to tests
  "FBT",     # Boolean positional arguments keep parameterized tests compact
  "PLC2701", # Private import in tests
  "PLR0913", # any number of arguments in tests
  "PLR0917", # any number of arguments in tests
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "S603",    # `subprocess` call: check for execution of untrusted input
]
lint.isort = { known-first-party = [
  "pipdeptree",
], required-imports = [
  "from __future__ import annotations",
] }
lint.pylint.allow-dunder-method-names = [ "_repr_mimebundle_" ]
lint.preview = true

[tool.codespell]
builtin = "clear,usage,en-GB_to_en-US"
# Cargo uses the writeable crate, and serde exposes serializer traits through ser.
ignore-words-list = "master,ser,writeable"
count = true
quiet-level = 3

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.ty]
src.exclude = []
environment.python-version = "3.14"

[tool.coverage]
run.parallel = true
run.plugins = [
  "covdefaults",
]
paths.source = [
  "src",
  ".tox/*/lib/python*/site-packages",
  "*/src",
]
report.fail_under = 100
html.show_contexts = true
html.skip_covered = false
subtract_omit = "*/__main__.py"
