[build-system]
build-backend = "mesonpy"
requires = [
  "meson>=1.11.2",
  "meson-python>=0.20",
  "ninja>=1.13",
]

[project]
name = "pipdeptree"
description = "Command line utility to show dependency tree of packages."
readme = "README.md"
keywords = [
  "application",
  "cache",
  "directory",
  "log",
  "user",
]
license = "MIT"
license-files = [
  "LICENSE",
]
maintainers = [
  { name = "Bernát Gábor", email = "gaborjbernat@gmail.com" },
  { name = "Kemal Zebari", email = "kemalzebra@gmail.com" },
  { name = "Vineet Naik", email = "naikvin@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Rust",
]
dynamic = [
  "version",
]
dependencies = [
  "nab-index>=0.0.11",
  "nab-python>=0.0.11",
]
urls.Changelog = "https://github.com/tox-dev/pipdeptree/releases"
urls.Documentation = "https://pipdeptree.readthedocs.io"
urls.Homepage = "https://github.com/tox-dev/pipdeptree"
urls.Source = "https://github.com/tox-dev/pipdeptree"
urls.Tracker = "https://github.com/tox-dev/pipdeptree/issues"
scripts.pipdeptree = "pipdeptree._runner:main"

[dependency-groups]
test = [
  "covdefaults>=2.3",
  "diff-cover>=10.3",
  "pluggy>=1.6",
  "pytest>=9.1.1",
  "pytest-cov>=7.1",
]
docs = [
  "furo>=2025.12.19",
  "sphinx>=9.1",
  "sphinx-copybutton>=0.5.2",
  "sphinx-inline-tabs>=2025.12.21.14",
  "sphinxcontrib-mermaid>=2.1",
]

[tool.meson-python]
limited-api = true

[tool.cibuildwheel]
overrides = [
  # meson-python refuses the limited API on a free-threaded interpreter, and the package asks for it by
  # default, so this build opts out.
  { select = "cp3*t-*", config-settings.setup-args = "-Dpython.allow_limited_api=false" },
]

[tool.ruff]
line-length = 120
format.preview = true
format.docstring-code-line-length = 100
format.docstring-code-format = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "any-type",                                  # Expressions typed as typing.Any are disallowed in
  "assert",                                    # asserts allowed
  "CPY",                                       # No copyright statements
  "docstring-missing-exception",               # Blocked by Ruff's incomplete Sphinx-style docstring support (astral-sh/ruff#12434)
  "docstring-missing-returns",                 # Blocked by Ruff's incomplete Sphinx-style docstring support (astral-sh/ruff#12434)
  "docstring-missing-yields",                  # Blocked by Ruff's incomplete Sphinx-style docstring support (astral-sh/ruff#12434)
  "hardcoded-bind-all-interfaces",             # Possible binding to all interface
  "implicit-namespace-package",                # no implicit namespace
  "incorrect-blank-line-before-class",         # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "magic-value-comparison",                    # Magic value used in comparison
  "missing-trailing-comma",                    # Conflict with formatter
  "multi-line-summary-first-line",             # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
  "non-empty-init-module",                     # `__init__` module should only contain docstrings and re-exports
  "single-line-implicit-string-concatenation", # Conflict with formatter
  "stdlib-module-shadowing",                   # Allow builtin module shadowing
  "undocumented-public-package",               # Missing docstring in public package
]
lint.per-file-ignores."tests/**/*.py" = [
  "D",                                    # Documentation rules do not apply to tests
  "FBT",                                  # Boolean positional arguments keep parameterized tests compact
  "import-private-name",                  # Private import in tests
  "magic-value-comparison",               # Magic value used in comparison, consider replacing with a constant variable
  "subprocess-without-shell-equals-true", # `subprocess` call: check for execution of untrusted input
  "too-many-arguments",                   # any number of arguments in tests
  "too-many-positional-arguments",        # any number of arguments in tests
]
lint.isort = { known-first-party = [
  "pipdeptree",
], required-imports = [
  "from __future__ import annotations",
] }
lint.pylint.allow-dunder-method-names = [ "_repr_mimebundle_" ]
lint.preview = true

[tool.codespell]
builtin = "clear,usage,en-GB_to_en-US"
# Cargo uses the writeable crate, and serde exposes serializer traits through ser.
ignore-words-list = "master,ser,writeable"
count = true
quiet-level = 3

[tool.pyproject-fmt]
max_supported_python = "3.15"

[tool.ty]
src.exclude = []
environment.python-version = "3.14"

[tool.coverage]
run.parallel = true
run.plugins = [
  "covdefaults",
]
paths.source = [
  "src",
  ".tox/*/lib/python*/site-packages",
  "*/src",
]
report.fail_under = 100
html.show_contexts = true
html.skip_covered = false
subtract_omit = "*/__main__.py"
